# magicpyden

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: magicpyden-check.yml  pylint.yml  python-package-test.yml  wemake_python_styleguide.yml
magicpyden/: __init__.py  api.py  constants.py  endpoint.py  schema.py  types.py
magicpyden/tests/: test_api.py
tests/: test_api.py
