[metadata]
name = magicpyden
version = attr: magicpyden.__version__
description = Asynchronous Python wrapper for the Magic Eden API
long_description = file: README.md
long_description_content_type = text/markdown
author = Christianperez34
author_email = christian.perez34@outlook.com
url = https://github.com/ChristianPerez34/magicpyden
download_url = https://codeload.github.com/ChristianPerez34/magicpyden/zip/refs/heads/main
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = MIT
keywords =
    async
    api

[options]
packages = magicpyden
test_suite = tests
install_requires =
    aiohttp

[flake8]
show-source = true
ignore = D100, D101, WPS202, C812, WPS305, DAR201, DAR101, C815, WPS214, WPS306, I005, I001, WPS235, S105
max-line-length = 88
max-complexity = 6
inline-quotes = double
exclude =
  .git
  __pycache__
  .venv
  tests/**
  */__init__.py